# Quick-Access-Extended

./: CMakeLists.txt  LICENSE  README.md
source/: C-Linker.h  CMakeLists.txt  Defenitions.h  GUID.h  Handler.cpp  Handler.h  Selector.cpp  Selector.h  ShellEX.cpp  ShellEX.def  ShellEX.h  Utilities.h
